solved the issue of overflow

--- a/my-app/src/Styles/DesktopStyles.css
+++ b/my-app/src/Styles/DesktopStyles.css
@@ -78,7 +78,7 @@
     #w-b-s
     {
         width: 100%;
-        height:1800px;
+        height:1830px;
         padding: 50px;
         overflow: hidden;
         margin-top: 30px;
@@ -104,21 +104,14 @@
         border-radius: 20px;
         border: 2px solid rgb(29, 150, 206);
         width: 100%;
-        height: 100%;
-        overflow: hidden;
-    }
-
-    .w-box img
-    {
-        position: relative;
-        width: 100%;
         height: 300px;
+        overflow: hidden;
     }
 
     .box-label
     {
-        position: absolute;
-        width: 98%;
+        position: relative;
+        width: 100%;
         height: 100%;
         background-color: rgba(43, 42, 42, 0.575);
         border-radius: 20px;
