--- a/my-app/src/Styles/MobileStyles.css
+++ b/my-app/src/Styles/MobileStyles.css
@@ -72,16 +72,22 @@
     #w-b-s
     {
         width: 100%;
-        height:3450px;
+        height:3210px;
         padding: 10px;
         overflow: hidden;
         margin-top: 30px;
     }
 
+    .city-choose
+    {
+        font-size: 35px;
+        color: blueviolet;
+        text-align: center;
+    }
+
     .bcon
     {
         padding: 0;
-        padding-right: 10px;
         margin-bottom: 25px;
         overflow: hidden;
     }
@@ -91,22 +97,14 @@
         border-radius: 20px;
         border: 2px solid rgb(29, 150, 206);
         width: 100%;
-        height: 100%;
+        height: 270px;
         overflow: hidden;
-        margin-left: 5px;
-    }
-
-    .w-box img
-    {
-        position: relative;
-        width: 100%;
-        height: 300px;
     }
 
     .box-label
     {
-        position: absolute;
-        width: 95%;
+        position: relative;
+        width: 100%;
         height: 100%;
         background-color: rgba(43, 42, 42, 0.575);
         border-radius: 20px;
@@ -125,7 +123,7 @@
     {
         color: #fff;
         font-family: 'Roboto', sans-serif;
-        font-size: 55px;
+        font-size: 47px;
     }
 
     #w-d-p
